# sceneflow

./: .gitignore  Makefile  README.md  pixi.toml  pyproject.toml  ruff.toml
assets/results/mots/: summary.json
assets/results/subtitles/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  summary.json
sceneflow/apps/annotation/: app.py
sceneflow/apps/annotation/src/: __init__.py  _helper.py  annotation_store.py  image_manager.py  label_manager.py
sceneflow/cli/: __init__.py  ocr_cli.py  redact.py  redact_cli.py  remove_cli.py  version.py
sceneflow/core/: __init__.py  camouflage.py  mask_generator.py  ocr_processor.py  remover.py
sceneflow/pipelines/: ocr.py  redact.py  redaction.py  remove.py
sceneflow/runners/: __init__.py  _factory.py  _helpers.py  _registry.py  lama.py  mmocr.py  owlvit.py  rtdetr.py  sam.py  tesseract.py  trocr.py  yolo.py  yolo_world.py
sceneflow/utils/: draw.py  hub.py  io.py  logger.py  progress.py  stdout_utils.py
scripts/: ocr-detect.sh  redact.sh  remove.sh
