[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "sceneflow"
version = "0.1.0"
description = "Modular toolkit for scene parsing, object segmentation, in-painting and static-background extraction."
authors = [{ name = "Tarek BOUAMER", email = "tarekbouamer1788@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"


dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python",
    "numpy==1.26.0",
    "pyyaml",
    "rich",
    "pycocotools",
    "loguru",
]


[project.optional-dependencies]
extra = [
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
]


[project.scripts]
sceneflow = "sceneflow.cli:cli"
sceneflow-redact = "sceneflow.cli.redact:redact_cli"


[tool.setuptools.packages.find]
include = ["sceneflow*"]
