[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sceneflow"
version = "0.1.0"
description = "Modular toolkit for scene parsing, object segmentation, in-painting and static-background extraction."
authors = [{ name = "Tarek BOUAMER", email = "tarekbouamer1788@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python",
    "pyyaml",
    "rich",
    "pycocotools",
    "loguru",
    "click",
    "transformers",
    "pytesseract",
    "mmdet>=3.0.0rc5,<3.4.0",
    "mmengine",
]


[project.optional-dependencies]
extra = [
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
]

[project.scripts]
sceneflow = "sceneflow.cli:cli"
sceneflow-redact = "sceneflow.cli.redact_cli:redact_cli"
sceneflow-ocr-detect = "sceneflow.cli.ocr_cli:ocr_cli"

[tool.setuptools.packages.find]
include = ["sceneflow*"]
